# rust-cpp

./: .gitignore  404.html  Cargo.toml  README.md  hello.html  january_2024.patch
docs/: README.md  mkdocs.yml  requirements.txt
red_pandas/: CMakeLists.txt  CMakePresets.json  Cargo.toml  README.txt  build.rs  cbindgen.toml  nvim.cmd  options.xlsx  pytest.ini  requirements.txt  vcpkg.json
red_pandas/deleteme/: decode.py  encode.py  setup.py
red_pandas/depends/NumCpp-master/develop/NdArray/: NdArrayCore.hpp
red_pandas/depends/NumCpp-master/docs/markdown/: Building.md  ReleaseNotes.md
red_pandas/depends/NumCpp-master/include/NumCpp/: Linalg.hpp  NdArray.hpp
red_pandas/depends/NumCpp-master/include/NumCpp/Coordinates/: Coordinate.hpp  Dec.hpp  RA.hpp
red_pandas/depends/NumCpp-master/include/NumCpp/Core/: Constants.hpp  DataCube.hpp  Shape.hpp  Slice.hpp
red_pandas/depends/NumCpp-master/include/NumCpp/ImageProcessing/: ClusterMaker.hpp  Pixel.hpp  applyThreshold.hpp  clusterPixels.hpp  generateCentroids.hpp  generateThreshold.hpp  windowExceedances.hpp
red_pandas/depends/NumCpp-master/include/NumCpp/Linalg/: cholesky.hpp  det.hpp  gaussNewtonNlls.hpp  hat.hpp  inv.hpp  lstsq.hpp  lu_decomposition.hpp  matrix_power.hpp  multi_dot.hpp  pivotLU_decomposition.hpp  solve.hpp
red_pandas/depends/NumCpp-master/include/NumCpp/NdArray/: NdArrayCore.hpp  NdArrayIterators.hpp  NdArrayOperators.hpp
red_pandas/depends/NumCpp-master/include/NumCpp/Polynomial/: Poly1d.hpp
red_pandas/depends/NumCpp-master/include/NumCpp/PythonInterface/: BoostInterface.hpp  PybindInterface.hpp
red_pandas/depends/NumCpp-master/include/NumCpp/Random/: bernoilli.hpp  beta.hpp  binomial.hpp  cauchy.hpp  chiSquare.hpp  choice.hpp  discrete.hpp  exponential.hpp  extremeValue.hpp  f.hpp  gamma.hpp  lognormal.hpp  negativeBinomial.hpp  nonCentralChiSquared.hpp  normal.hpp  permutation.hpp  poisson.hpp  rand.hpp  randFloat.hpp  randInt.hpp  randN.hpp  standardNormal.hpp  triangle.hpp  uniform.hpp  uniformOnSphere.hpp  weibull.hpp
red_pandas/depends/NumCpp-master/include/NumCpp/Roots/: Bisection.hpp  Brent.hpp  Iteration.hpp  Newton.hpp  Secant.hpp
red_pandas/depends/NumCpp-master/include/NumCpp/Rotations/: DCM.hpp  Quaternion.hpp
red_pandas/depends/NumCpp-master/test/compilers/: test_compilers.py
red_pandas/depends/NumCpp-master/test/pytest/: test_filters.py  test_ndarray_core.py  test_ndarray_operators.py  test_special.py
red_pandas/depends/entityx-12-2-2023/: CMakeLists.txt
red_pandas/depends/entityx-12-2-2023/entityx/: System_test.cc  config.h.in
red_pandas/depends/excelbind/: .gitignore
red_pandas/depends/excelbind/examples/: excelbind.conf
red_pandas/depends/excelbind/src/: CMakeLists.txt
red_pandas/depends/excelbind/src/excelbind/: configuration.cpp  execute_python.cpp  function_registration.cpp
red_pandas/depends/excelbind/test/utilities/: env_vars.py
red_pandas/depends/implot_demos/: CMakeLists.txt
red_pandas/depends/implot_demos/common/: App.cpp
red_pandas/depends/implot_demos/demos/: filter.cpp  mandel.cpp
red_pandas/depends/libIntegrate/: CMakeLists.txt
red_pandas/depends/mdspan-stable/: CMakeLists.txt
red_pandas/depends/ta-lib-main/: CMakeLists.txt
red_pandas/docs/: docs.cmd  mkdocs.yml  requirements.txt
red_pandas/libs/: CMakeLists.txt  red_pandas.h
red_pandas/libs/core/: CMakeLists.txt  client.cpp  server.cpp
red_pandas/libs/core/include/: IterableRepository.h  abs.h  api.h  arrow.h  calculation.h  categorical.h  cdf.h  clean.h  common.h  diff.h  div.h  erf.h  exp.h  log.h  max0.h  min0.h  mul.h  neg.h  pdf.h  pow.h  ppf.h  rand_normal.h  range.h  rsi.h  serie.h  serie2d.h  shift.h  sqrt.h  sub.h  sum.h  util.h
red_pandas/libs/core/include/fes/: connection.h  internal_connection.h  method.h  sync.h
red_pandas/libs/core/include/formulas/: greeks.h  volatility.h
red_pandas/libs/core/include/memoize/: memoize.hpp
red_pandas/libs/core/include/old/: string2_test.h  string_test.h
red_pandas/libs/core/include/operators/: isfinite.h  less.h
red_pandas/libs/core/python/: grpc.pb.cc  grpc.pb.h  grpc.proto  grpc_generate.cmd  grpc_pb2.py  grpc_pb2_grpc.py  interface_py.i  interface_py_wrap.cxx  numpy.i  red_pandas.py  red_pandas_impl.py  swig_generate.cmd
red_pandas/libs/core/python/grpc/: grpc_pb2.py
red_pandas/libs/core/python/javascript/: interface_py.i  interface_py_wrap.cxx
red_pandas/libs/core/src/: abs.cpp  allocator.cpp  arrow.cpp  calculation.cpp  categorical.cpp  cdf.cpp  clean.cpp  diff.cpp  div.cpp  erf.cpp  exp.cpp  log.cpp  max0.cpp  min0.cpp  mul.cpp  neg.cpp  pdf.cpp  pow.cpp  ppf.cpp  rand_normal.cpp  range.cpp  rsi.cpp  serie.cpp  serie2d.cpp  shift.cpp  sqrt.cpp  sub.cpp  sum.cpp
red_pandas/libs/core/src/formulas/: greeks.cpp  volatility.cpp
red_pandas/libs/core/src/old/: string_test.cpp
red_pandas/libs/core/src/operators/: isfinite.cpp  less.cpp
red_pandas/libs/core/tests/: Test07_20160421_154847_Input.il  Test07_20160421_154847_Input_MODIFIED.il  Test07_20160421_154847_Input_MODIFIED.json  example_MODIFIED.json  test_core.cpp  test_core.py  test_volatility.cpp  test_volatility.py
red_pandas/libs/finance/: CMakeLists.txt
red_pandas/libs/finance/include/: npv.h
red_pandas/libs/finance/src/: npv.cpp
red_pandas/libs/finance/tests/: tests_npv.cpp
red_pandas/libs/gui/: CMakeLists.txt
red_pandas/libs/gui/include/: gui.h  producer.h
red_pandas/libs/gui/src/: gui.cpp  producer.cpp
red_pandas/libs/portfolio/: CMakeLists.txt
red_pandas/libs/portfolio/include/: portfolio.h  portfolio.py
red_pandas/libs/portfolio/src/: portfolio.cpp
red_pandas/libs/portfolio/tests/: test_portfolio.cpp
red_pandas/libs/simulator/: CMakeLists.txt
red_pandas/libs/simulator/include/: hello.py  simulator.h
red_pandas/libs/simulator/src/: simulator.cpp
red_pandas/libs/simulator/tests/: test_simulator.cpp
red_pandas/libs/template/: CMakeLists.txt
red_pandas/libs/template/include/: portfolio.h
red_pandas/libs/template/src/: portfolio.cpp
red_pandas/libs/template/tests/: portfolio.cpp
red_pandas/src/: lib.rs
(+64 files in other folders)
