[package]
name = "rust_cpp"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
http_parser = "0.0.2"
rocket = { version = "0.5.0-rc.3", features=["json"] }
diesel = { version = "2.0.3", features = ["postgres", "chrono", "r2d2", "serde_json", "numeric"] }

# https://pyo3.rs/v0.20.0/python_from_rust
[dependencies.pyo3]
version = "0.20.0"
features = ["auto-initialize"]

[dependencies.test_cpp]
path = "./test_cpp"

[dependencies.red_pandas]
path = "./red_pandas"
