[package]
name = "red_pandas"
version = "0.1.1"
authors = ["Ricardo Marmolejo García <makiolo@gmail.com>"]
edition = "2021"
crate-type = ["staticlib"]
# links = "red_pandas_static"

[build]
# https://doc.rust-lang.org/rustc/command-line-arguments.html#--print-print-compiler-information
# --print native-static-libs
target = "x86_64-pc-windows-msvc"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
bindgen = "0.65.1"
