[package]
name = "red_pandas"
version = "0.2.0"
authors = ["Ricardo Marmolejo García <makiolo@gmail.com>"]
edition = "2021"
crate-type = ["staticlib"]

# [build]
# https://doc.rust-lang.org/rustc/command-line-arguments.html#--print-print-compiler-information
# --print native-static-libs
# target = "x86_64-pc-windows-msvc"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
bindgen = "0.69.4"
